[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/scene/prefab/object/Ball.gd" type="Script" id=1]
[ext_resource path="res://src/assets/texture/object/ball_texture.png" type="Texture" id=2]
[ext_resource path="res://src/assets/audio/sfx/object/ball_death.wav" type="AudioStream" id=3]
[ext_resource path="res://src/assets/audio/sfx/object/wall_ball.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=3]
radius = 9.84886

[sub_resource type="AudioStreamRandomPitch" id=4]
audio_stream = ExtResource( 3 )
random_pitch = 1.5

[sub_resource type="AudioStreamRandomPitch" id=5]
audio_stream = ExtResource( 4 )
random_pitch = 1.5

[node name="Ball" type="Area2D" groups=["Ball"]]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="BallDeathAudio" type="AudioStreamPlayer" parent="."]
stream = SubResource( 4 )
bus = "SFX"

[node name="WallBallAudio" type="AudioStreamPlayer" parent="."]
stream = SubResource( 5 )
bus = "WallBall"

[connection signal="area_entered" from="." to="." method="_on_Ball_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Ball_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Ball_body_exited"]
